BUG FIX: previous board rotation broke cell reavealing logic. Fixed it by using rotate css property with the js. Tests on mobile needed.

--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,9 @@
   --cell-width: 40px;
   --cell-height: 40px;
   --border-width: 0.2rem;
+  --rotate: 0;
+  --rotate-number: 0;
+  --expert-top: 0;
 
   --difficulty-font-size: 0.8rem;
 
@@ -257,7 +260,6 @@ span::selection {
   width: 200px;
   background-color: var(--white-color);
   border: 1px solid var(--black-color-50);
-  z-index: 100;
   transition: opacity 0.3s ease-in;
 }
 
@@ -530,7 +532,7 @@ span::selection {
   height: 100%;
   color: var(--white-color);
   background-color: rgba(19, 1, 1, 0.8);
-  z-index: 100;
+  z-index: 10;
   padding-top: 5rem;
 }
 
@@ -878,16 +880,16 @@ span::selection {
   /* Board */
 
   .game-screen {
-    --cell-width: 28px;
-    --cell-height: 28px;
+    --cell-width: 29px;
+    --cell-height: 29px;
   }
 
   .game-board > [data-cell-state='bomb']::after {
-    font-size: 1.4rem;
+    font-size: 1.5rem;
   }
 
   .game-board > [data-cell-state='bomb-exploded']::after {
-    font-size: 1.4rem;
+    font-size: 1.5rem;
   }
 
   /* Bomb guessed/marked */
@@ -896,19 +898,19 @@ span::selection {
   }
 
   .game-board > [data-cell-state='bomb-marked']::before {
-    width: 28px;
+    width: 29px;
   }
 
   .game-board > [data-cell-state='bomb-marked']::after {
-    width: 28px;
+    width: 29px;
   }
 
   .game-board > [data-cell-state='flagged']::after {
-    font-size: 1.3rem;
+    font-size: 1.4rem;
   }
 
   .cell {
-    font-size: 1.3rem;
+    font-size: 1.5rem;
   }
 
   .time-left {
@@ -931,7 +933,8 @@ span::selection {
   }
 
   .revealed-count {
-    font-size: 1rem;
+    margin-top: -0.5rem;
+    font-size: 0.9rem;
   }
 
   .game-buttons__btn {
@@ -1084,6 +1087,16 @@ span::selection {
     order: 1;
   }
 
+  .game-board {
+    position: relative;
+    transform: rotate(var(--rotate));
+    top: var(--expert-top);
+  }
+
+  .cell {
+    transform: rotate(var(--rotate-number));
+  }
+
   /* End Game Modal */
   .endgame-modal {
     opacity: 0;
@@ -1101,6 +1114,7 @@ span::selection {
     padding-top: 0.5rem;
     font-family: var(--font-game);
     font-size: 0.5rem;
+    pointer-events: none;
   }
 
   .endgame-modal__header {
@@ -1197,6 +1211,7 @@ span::selection {
     align-items: center;
     justify-content: space-between;
     font-size: 0.7rem;
+    margin-top: 0;
   }
 
   .revealed-count > span {
